# CmakeStudy

./: .gitignore  CMakeLists.txt  MyTest.cpp  MyTest.h  main.cpp
